<resources>
    <string name="app_name">Banner</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_back">Back</string>
    <string name="nombre">Nombre</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Digite un nombre de usuario</string>
    <string name="invalid_password">Digite una contraseña</string>
    <string name="login_failed">"Credenciales Incorrectas"</string>
    <string name="title_activity_register">Register</string>
    <string name="app_logo">Logo UNA</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="agregar_curso">Agregar curso</string>
    <string name="nombre_del_curso">Nombre del curso</string>
    <string name="c_digo">Código</string>
    <string name="horas_semanales">Horas semanales</string>
    <string name="cr_ditos">Créditos</string>
    <string name="nombre_curso">Nombre del curso</string>
    <string name="c_digo_del_curso">Código del curso</string>
    <string name="cr_ditos_horas_semanales">Créditos - Horas semanales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreProfesor">Nombre</string>
    <string name="cedulaProfesor">Cédula</string>
    <string name="telefonoProfesor">Teléfono</string>
    <string name="emailProfesor">email</string>
    <string name="agregar_profesor">Agregar Profesor</string>
    <string name="nombre_del_curso_item">Nombre del curso</string>
    <string name="c_digo_xxx">Código: XXX</string>
    <string name="_3_cr_ditos_4_hrs_semana">3 créditos · 4 hrs/semana</string>
    <string name="t_tulo_de_la_carrera">Título de la carrera</string>
    <string name="nombre_de_la_carrera">Nombre de la carrera</string>
    <string name="c_digo_de_la_carrera">Código de la carrera</string>
    <string name="agregar_carrera">Agregar carrera</string>
    <string name="c_dula_del_alumno">Cédula del Alumno</string>
    <string name="nombre_del_alumno">Nombre del Alumno</string>
    <string name="fecha_de_nacimiento_del_alumno">Fecha de Nacimiento del Alumno</string>
    <string name="email_del_alumno">Email del Alumno</string>
    <string name="tel_fono_del_alumno">Teléfono del Alumno</string>
    <string name="agregar_alumno">Agregar Alumno</string>
    <string name="anio_ciclo">Año</string>
    <string name="n_mero_de_ciclo">Número de Ciclo</string>
    <string name="fecha_de_inicio">Fecha de Inicio</string>
    <string name="fecha_de_fin">Fecha de Fin</string>
    <string name="agregar_ciclo">Agregar Ciclo</string>
    <string name="ciclo_activo">Ciclo Activo</string>
    <string name="ciclo_id">Ciclo ID</string>
    <string name="consultar_historial">Consultar Historial</string>
    <string name="agregar_oferta">Agregar Oferta</string>
</resources>