<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/etCicloID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/ciclo_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/etAnioCiclo"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/anio_ciclo"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNumeroCiclo"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/n_mero_de_ciclo"
            android:inputType="text" />

        <EditText
            android:id="@+id/etFechaInicioCiclo"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/fecha_de_inicio"
            android:inputType="date" />

        <EditText
            android:id="@+id/etFechaFinCiclo"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/fecha_de_fin"
            android:inputType="date" />

        <CheckBox
            android:id="@+id/etCicloActivo"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:text="@string/ciclo_activo"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </LinearLayout>
</ScrollView>
