<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etCedulaAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/c_dula_del_alumno"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNombreAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/nombre_del_alumno"
            android:inputType="text" />

        <EditText
            android:id="@+id/etTelefonoAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/tel_fono_del_alumno"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etEmailAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/email_del_alumno"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etFechaNacimientoAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/fecha_de_nacimiento_del_alumno"
            android:inputType="date" />

        <EditText
            android:id="@+id/etCodigoCarreraAlumno"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/c_digo_de_la_carrera"
            android:inputType="text" />

    </LinearLayout>
</ScrollView>
