<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvCicloID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/ciclo_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvAnioCiclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anio_ciclo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvNumeroCiclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_mero_de_ciclo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/tvFechaInicioCiclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:text="@string/fecha_de_inicio"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvFechaFinCiclo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_fin"
            tools:ignore="LabelFor"
            android:autofillHints=""
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <CheckBox
            android:id="@+id/tvCicloActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciclo_activo"
            android:paddingTop="8dp"
            android:focusable="false"
            android:clickable="false"
            android:inputType="none"
            android:paddingBottom="8dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
