<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvCodigoCarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_de_la_carrera"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvNombreCarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_la_carrera"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/tvTituloCarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_tulo_de_la_carrera"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
