<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvNombreCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_curso_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvCodigoCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_xxx"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/tvDetallesCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_cr_ditos_4_hrs_semana"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/tvSpinnerCarreraCurso"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:spinnerMode="dropdown"
            android:focusable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/tvSpinnerCicloCurso"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:spinnerMode="dropdown"
            android:focusable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
